fixgin the white colour contrast to fixe the buttons.

--- a/assets/css/blocks/button.scss
+++ b/assets/css/blocks/button.scss
@@ -313,6 +313,7 @@ body {
 
 			&:hover {
 				background-color: var(--wp--custom--colour--quaternary--700) !important;
+				color:#fff !important;
 			}
 			&:active{
 				background-color: var(--wp--custom--colour--quaternary--400) !important;
@@ -323,6 +324,7 @@ body {
 
 			&:hover {
 				background-color: var(--wp--custom--colour--quinary--700) !important;
+				color:#fff !important;
 			}
 			&:active {
 				background-color: var(--wp--custom--colour--quinary--400) !important;
